--- a/index.html
+++ b/index.html
@@ -13,54 +13,62 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Roboto:wght@400;500&display=swap"
 		rel="stylesheet">
 </head>
-<fieldset></fieldset>
 
 <body>
-	<div class="page">
-		<header>
-			<p>
-				<svg width="36" height="23" viewBox="0 0 36 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-					<path d="M20.1795 1L1 19C12.5774 9.4 28.4906 15 35 19L20.1795 1Z" stroke="#D4CCB6" stroke-linejoin="round" />
-					<path d="M20.1795 4L1 22C12.5774 12.4 28.4906 18 35 22L20.1795 4Z" stroke="#D4CCB6" stroke-linejoin="round" />
-				</svg>
-				camp.in
-			</p>
-			<section>
-				<h1>
-					<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<path
-							d="M15 3H19C19.5304 3 20.0391 3.21071 20.4142 3.58579C20.7893 3.96086 21 4.46957 21 5V19C21 19.5304 20.7893 20.0391 20.4142 20.4142C20.0391 20.7893 19.5304 21 19 21H15"
-							stroke="#FFC632" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-						<path d="M10 17L15 12L10 7" stroke="#FFC632" stroke-width="2" stroke-linecap="round"
-							stroke-linejoin="round" />
-						<path d="M15 12H3" stroke="#FFC632" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-					</svg>
-					Faça seu login
-				</h1>
-				<p>Entre com suas informações de cadastro.</p>
-			</section>
-		</header>
-		<form>
-			<fieldset>
-				<label for="message">E-mail</label>
-				<input type="email" name="message" id="message" placeholder=" Digite seu e-mail" />
-			</fieldset>
-			<fieldset>
-				<label for="password">Senha</label>
-				<input type="password" name="password" id="password" placeholder="Digite sua senha" />
-			</fieldset>
-			<div class="check">
-				<input type="checkBox" name="checkBox" id="checkBox" />
-				<label for="checkBox"> Lembre-me</label>
 
-				<label for="forget"><span>Esqueci minha senha</span></label>
-			</div>
-			<button>ENTRAR</button>
+	<header>
 
-			<p><span>Não tem uma conta? Registre-se</span></p>
-		</form>
+	</header>
+	<div class="login">
 
+		<img src="./images/logo.svg" alt="logo marca" />
+
+		<h1>
+			<img src="./images/log-in.svg" alt="imagem de uma seta para efetuar login" />
+			Faça seu login
+		</h1>
+		<p>
+			Entre com suas informações de cadastro.
+		</p>
 	</div>
+
+	<form>
+		<div class="data">
+
+			<p>
+				<label for="adress">email</label>
+				<input type="email" name="adress" id="adress" placeholder="Digite seu email" />
+
+			</p>
+			<br />
+
+			<p>
+				<label for="password">Senha: </label>
+				<input type="password" name="password" id="password" placeholder="Digite sua senha" />
+
+			</p>
+
+		</div>
+
+		<div class="forget">
+			<p>
+				<input type="checkbox" name="check" id="check" />
+				<label for="check">Lembre-me</label>
+			</p>
+
+			<br />
+
+			<p><span>Esqueci minha senha</span></p>
+		</div>
+	</form>
+
+	<button>
+		ENTRAR
+	</button>
 </body>
+
+<footer>
+	Não tem uma conta? <span>Registre-se</span>
+</footer>
 
 </html>
